--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,12 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">suite</th></tr>
-<tr><td><a href="#t0">Automation</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">51,239</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Automation</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">71,535</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Automation &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Tests.LoginPageTest</td><td><a href="#m0">loginTest</a></td><td rowspan="1">1722626843169</td><td rowspan="1">29662</td></tr><tr class="passedodd"><td rowspan="1">Tests.RegistationPageTest</td><td><a href="#m1">callRegitation</a></td><td rowspan="1">1722626877321</td><td rowspan="1">12521</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Automation &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Tests.LoginPageTest</td><td><a href="#m0">loginTest</a></td><td rowspan="1">1723263285415</td><td rowspan="1">18519</td></tr><tr class="passedodd"><td rowspan="1">Tests.RegistationPageTest</td><td><a href="#m1">callRegitation</a></td><td rowspan="1">1723263308381</td><td rowspan="1">16246</td></tr><tr class="passedeven"><td rowspan="1">Tests.demoSiteTest</td><td><a href="#m2">demoSiteRun</a></td><td rowspan="1">1723263324932</td><td rowspan="1">29991</td></tr></tbody>
 </table>
 <h2>Automation</h2><h3 id="m0">Tests.LoginPageTest#loginTest</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 <h3 id="m1">Tests.RegistationPageTest#callRegitation</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Tests.demoSiteTest#demoSiteRun</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
