--- a/test-output/index.html
+++ b/test-output/index.html
@@ -92,7 +92,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,6 +104,11 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-suite" title="Tests.RegistationPageTest" class="method navigator-link" hash-for-method="callRegitation">callRegitation</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-suite" title="Tests.demoSiteTest" class="method navigator-link" hash-for-method="demoSiteRun">demoSiteRun</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -153,6 +158,21 @@
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-suite-class-passed -->
+          <div class="suite-suite-class-passed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="passed.png"/>
+              <span class="class-name">Tests.demoSiteTest</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="demoSiteRun">
+                  </a> <!-- demoSiteRun -->
+                  <span class="method-name">demoSiteRun</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-suite-class-passed -->
         </div> <!-- panel suite -->
         <div panel-name="test-xml-suite" class="panel">
           <div class="main-panel-header rounded-window-top">
@@ -167,6 +187,7 @@
     &lt;classes&gt;
       &lt;class name=&quot;Tests.LoginPageTest&quot;/&gt;
       &lt;class name=&quot;Tests.RegistationPageTest&quot;/&gt;
+      &lt;class name=&quot;Tests.demoSiteTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Automation --&gt;
 &lt;/suite&gt; &lt;!-- suite --&gt;
@@ -180,7 +201,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Automation (2 classes)</span>
+                <span class="test-name">Automation (3 classes)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -206,20 +227,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'loginTest')
-data.setCell(0, 2, 'Tests.LoginPageTest')
-data.setCell(0, 3, 29662);
+data.setCell(0, 1, 'demoSiteRun')
+data.setCell(0, 2, 'Tests.demoSiteTest')
+data.setCell(0, 3, 29991);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'callRegitation')
-data.setCell(1, 2, 'Tests.RegistationPageTest')
-data.setCell(1, 3, 12521);
+data.setCell(1, 1, 'loginTest')
+data.setCell(1, 2, 'Tests.LoginPageTest')
+data.setCell(1, 3, 18519);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'callRegitation')
+data.setCell(2, 2, 'Tests.RegistationPageTest')
+data.setCell(2, 3, 16246);
 window.suiteTableData['suite']= { tableData: data, tableDiv: 'times-div-suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 42 seconds</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-suite">
               </div> <!-- times-div-suite -->
             </div> <!-- times-div -->
@@ -234,11 +259,18 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">1 ignored method</span>
+            <span class="header-content">2 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="ignored-class-div">
               <span class="ignored-class-name">Tests.RegistationPageTest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">setBrowser</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">Tests.demoSiteTest</span>
               <div class="ignored-methods-div">
                 <span class="ignored-method-name">setBrowser</span>
                 <br/>
@@ -257,32 +289,53 @@ return data;
                 <span class="method-name">setBrowser</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">Tests.demoSiteTest</div> <!-- chronological-class-name -->
+              <div class="configuration-suite before">
+                <span class="method-name">openUrl</span>
+                <span class="method-start">16757 ms</span>
+              </div> <!-- configuration-suite before -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">Tests.LoginPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">openUrl</span>
-                <span class="method-start">1712 ms</span>
+                <span class="method-start">22151 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">loginTest</span>
-                <span class="method-start">6008 ms</span>
+                <span class="method-start">23965 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">report</span>
-                <span class="method-start">35679 ms</span>
+                <span class="method-start">42491 ms</span>
               </div> <!-- configuration-class after -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">Tests.RegistationPageTest</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
                 <span class="method-name">openUrl</span>
-                <span class="method-start">36382 ms</span>
+                <span class="method-start">43181 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">callRegitation</span>
-                <span class="method-start">40160 ms</span>
+                <span class="method-start">46931 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">report</span>
-                <span class="method-start">52685 ms</span>
+                <span class="method-start">63181 ms</span>
+              </div> <!-- configuration-class after -->
+            </div> <!-- chronological-class -->
+            <div class="chronological-class">
+              <div class="chronological-class-name">Tests.demoSiteTest</div> <!-- chronological-class-name -->
+              <div class="test-method">
+                <span class="method-name">demoSiteRun</span>
+                <span class="method-start">63482 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-class after">
+                <span class="method-name">report</span>
+                <span class="method-start">93475 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
